--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
         with:
           version: nightly
 
+      - name: Install Dependencies
+        run: yarn --frozen-lockfile
+
       - name: Run Forge build
         run: |
           forge --version
