deposit nft metadata

--- a/foundry.toml
+++ b/foundry.toml
@@ -15,8 +15,8 @@ bytecode_hash = "ipfs"
 extra_output = ["storageLayout"]
 extra_output_files = ["metadata"]
 fs_permissions = [{ access = "read", path = "out" }]
-# eth_rpc_url  = "https://rpc.darwinia.network"
-# etherscan_api_key = "xxx"
+eth_rpc_url  = "https://rpc.darwinia.network"
+etherscan_api_key = "xxx"
 
 [rpc_endpoints]
 koi = "https://koi-rpc.darwinia.network"
