--- a/foundry.toml
+++ b/foundry.toml
@@ -15,7 +15,7 @@ bytecode_hash = "ipfs"
 extra_output = ["storageLayout"]
 extra_output_files = ["metadata"]
 fs_permissions = [{ access = "read", path = "out" }]
-# eth_rpc_url  = "https://rpc.darwinia.network"
+# eth_rpc_url  = "http://c1.crab-rpc.itering.io:9944"
 # etherscan_api_key = "xxx"
 
 [rpc_endpoints]
